add summernote editor
add summernote editor
--------
npm i summernote --save-dev
-------
add relationships
add CheckCategories middleware

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,16 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+@import "~summernote/dist/summernote-bs4.css";
+
+.flash {
+    position: fixed;
+    top: 50px;
+    right: 10px;
+    z-index: 999;
+}
