--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 @import "~summernote/dist/summernote-bs4.css";
+@import "~select2/dist/css/select2.css";
 
 .flash {
     position: fixed;
